Corrected alignment of images in portfolio page

--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,4 @@
+/* --------------General------------- */
 html, body {
   margin: 0;
   padding: 0;
@@ -57,6 +58,51 @@ a {
 h2, h3 {
   text-align: left;
   text-transform: capitalize;
+}
+
+#icons{
+display: flex;
+flex-direction: row;
+justify-content: center;
+position: fixed;
+top:0px;
+left: 0px;
+right:0;
+margin-right: auto;
+margin-left: auto;
+width:50px;
+height:300px;
+z-index:999999;
+}
+
+#icons a {
+}
+
+.fa {
+    padding: 20px;
+    font-size: 30px;
+    width: 50px;
+    text-align: center;
+    text-decoration: none;
+}
+
+.fa:hover {
+    opacity: 0.7;
+}
+
+.fa-facebook {
+    background: #3B5998;
+    color: white;
+}
+
+.fa-twitter {
+    background: #55ACEE;
+    color: white;
+}
+
+.fa-linkedin {
+    background: #3B5998;
+    color: white;
 }
 
 footer {
@@ -200,7 +246,7 @@ span {
 /* --------------Portfolio------------- */
 .portfolio-container {
   /* padding: 0 60px 0 60px 0; */
-  height: 300vh;
+  min-height: 300vh;
   width: auto;
 }
 
@@ -243,21 +289,22 @@ object-fit: cover;
 
 .image-grid {
   display: grid;
-  grid-template-columns: fr 85px 85px 85px 85px 85px fr;
-  grid-template-rows: repeat{6,fr};
-  height: 40%;
-  width: 100%;
-  padding: 100px 100px 0 100px;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 1fr 1fr;
+  min-height: 500px;
+  width: 50%;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .first-small {
-  background-size: contain;
+  background-size: cover;
+  background-position: center;
   background-repeat: no-repeat;
-  object-fit: cover;
-  grid-column-start: 2;
-  grid-column-end: 4;
-  grid-row: 1 / span 4;
-  /* justify-content: center; */
+  background-image:url(../images/resist.jpg);
+  grid-column-start: 1;
+  grid-column-end: 2;
+  grid-row: 1;
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
@@ -266,12 +313,13 @@ object-fit: cover;
 }
 
 .second-small {
-  background-size: contain;
+  background-size: cover;
+  background-position: center;
   background-repeat: no-repeat;
-  object-fit: cover;
-  grid-column-start: 4;
-  grid-column-end: 6;
-  grid-row: 1 / span 4;
+  background-image:url(../images/cityscape.jpg);
+  grid-column-start: 2;
+  grid-column-end: 3;
+  grid-row: 1;
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
@@ -280,12 +328,13 @@ object-fit: cover;
 }
 
 .big-box {
-  background-size: contain;
+  background-size: cover;
+  background-position: center;
   background-repeat: no-repeat;
-  object-fit: ;
-  grid-column-start: 2;
-  grid-column-end: 4;
-  grid-row: 4 / 6;
+  background-image:url(../images/kindle.jpg);
+  grid-column-start: 1;
+  grid-column-end: span 2;
+  grid-row-start: 2;
   display: flex;
   flex-wrap: wrap;
   flex-direction: column;
